Kubernetes/sci-viz/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sci-viz-deployment
  labels:
    app: sci-viz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sci-viz
  template:
    metadata:
      labels:
        app: sci-viz
    spec:
      containers:
      - name: sci-viz
        image: datajoint/sci-viz:1.0.0
        command: ["/bin/sh"]
        args: ["-c","sh sci-viz-hotreload-dev.sh"]
        ports:
        - containerPort: 80
        volumeMounts:
          - name: spec
            mountPath: "/main/specs"
            readOnly: true
      volumes:
      - name: spec
        configMap:
          name: mymap
...
